# HelmOS

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  package-lock.json  package.json  tmp-ideation-config.json
src/backend/: .env.example  .env.litellm.example  README.md  docker-compose.litellm.yml  pyproject.toml  server.js
src/backend/app/: __init__.py  create-app.js  main.py
src/backend/fixtures/: seed_data.json
src/backend/helmos_agentic_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/backend/scripts/: run-idea-evaluation-stage.js  run-idea-foundry-pipeline-schedule-pass.js  run-idea-foundry-pipeline.js  run-idea-refinement-stage.js  run-proto-idea-stage.js  seed_data.py
src/backend/tests/: agent-admin.service.test.js  agent-gateway-client.test.js  api.test.js  idea-evaluation.api.test.js  idea-evaluation.service.test.js  idea-foundry-pipeline-history.service.test.js  idea-foundry-pipeline-schedule.service.test.js  idea-foundry-pipeline.service.test.js  idea-refinement.service.test.js  knowledge-base.service.test.js  prisma-client.test.js  prospecting-configuration.service.test.js  prospecting-runtime.service.test.js  proto-idea-extraction.service.test.js  startup-scripts.test.js  support-log-analysis.service.test.js  support-telemetry.service.test.js  support.service.test.js  test_agent_test_driver.py  test_agent_test_execution.py  test_agent_test_fixtures.py  test_agent_test_progression.py  test_agent_test_run_detail.py  test_agent_test_scoring.py  test_llm_gateway_logging.py  test_model_router.py  test_rules_engine.py  (+9 more)
(+306 files in other folders)
